tests/machine/x/swift/cross_join_filter.error
/tmp/TestSwiftCompiler_VMValid_Goldencross_join_filter2274198505/001/main.swift:14:16: error: cannot convert value of type '[String : Any]' to expected argument type '(l: String, n: Int)'
12 | 		for l in letters {
13 | 			if !(n % 2 == 0) { continue }
14 | 			_res.append(["n": n, "l": l])
   |                `- error: cannot convert value of type '[String : Any]' to expected argument type '(l: String, n: Int)'
15 | 		}
16 | 	}
