tests/machine/x/swift/cross_join_filter.swift
// Generated by Mochi compiler v0.10.26 on 2025-07-16T16:40:30Z
struct Pair: Equatable {
    var l: String
    var n: Int
}

var nums = [1, 2, 3]
var letters = ["A", "B"]
var pairs = ({
	var _res: [(l: String, n: Int)] = []
	for n in nums {
		for l in letters {
			if !(n % 2 == 0) { continue }
			_res.append(["n": n, "l": l])
		}
	}
	return _res
}())
print("--- Even pairs ---")
for p in pairs {
    print(p.n, p.l)
}
